[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game/Datapacks/UI/PackVarUIs/DropTableVarUI.gd" type="Script" id=1]
[ext_resource path="res://Game/Datapacks/UI/PackVarUIs/NumberVarUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Datapacks/UI/PackVarUIs/SelectorVarUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Datapacks/UI/PackVarUIs/DropTableEntryUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://GlobalTheme.tres" type="Theme" id=5]

[node name="DropTableVarUI" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 1280.0
margin_bottom = 25.4
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Drop table"
valign = 1

[node name="BaseDropTable" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 1280.0
margin_bottom = 53.0
theme = null

[node name="ChanceToDropCreditsUI" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 56.0
margin_right = 1280.0
margin_bottom = 81.0
theme = null

[node name="MinCreditsUI" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 1280.0
margin_bottom = 109.0
theme = null

[node name="MaxCreditsUI" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 112.0
margin_right = 1280.0
margin_bottom = 137.0
theme = null

[node name="Label2" type="Label" parent="."]
margin_top = 139.0
margin_right = 1280.0
margin_bottom = 164.4
text = "Custom loot"

[node name="CustomLootKindSelector" type="OptionButton" parent="."]
margin_top = 168.0
margin_right = 300.0
margin_bottom = 191.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 194.0
margin_right = 1280.0
margin_bottom = 294.0

[node name="CustomLootItemList" type="ItemList" parent="HBoxContainer"]
margin_right = 300.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 100 )
size_flags_horizontal = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 297.0
margin_right = 1280.0
margin_bottom = 322.0

[node name="AddCustomLootButton" type="Button" parent="HBoxContainer2"]
margin_right = 60.0
margin_bottom = 25.0
rect_min_size = Vector2( 60, 0 )
text = "Add"

[node name="Label" type="Label" parent="HBoxContainer2"]
margin_left = 63.0
margin_top = -1.0
margin_right = 129.4
margin_bottom = 24.4
text = "Chance: "

[node name="SpinBox" type="SpinBox" parent="HBoxContainer2"]
margin_left = 132.0
margin_right = 194.0
margin_bottom = 25.0
step = 0.1
value = 50.0

[node name="Label2" type="Label" parent="HBoxContainer2"]
margin_left = 197.0
margin_top = -1.0
margin_right = 297.4
margin_bottom = 24.4
text = "Min amount: "

[node name="SpinBox2" type="SpinBox" parent="HBoxContainer2"]
margin_left = 300.0
margin_right = 362.0
margin_bottom = 25.0
value = 1.0
rounded = true
allow_greater = true

[node name="Label3" type="Label" parent="HBoxContainer2"]
margin_left = 365.0
margin_top = -1.0
margin_right = 468.4
margin_bottom = 24.4
text = "Max amount: "

[node name="SpinBox3" type="SpinBox" parent="HBoxContainer2"]
margin_left = 471.0
margin_right = 533.0
margin_bottom = 25.0
value = 1.0
rounded = true
allow_greater = true

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_top = 325.0
margin_right = 1280.0
margin_bottom = 354.0

[node name="CustomLootList" type="VBoxContainer" parent="PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 1278.0
margin_bottom = 27.0
rect_min_size = Vector2( 0, 20 )

[node name="DropTableEntryUI" parent="PanelContainer/CustomLootList" instance=ExtResource( 4 )]
margin_right = 1276.0
margin_bottom = 25.0

[connection signal="onValueChange" from="BaseDropTable" to="." method="_on_BaseDropTable_onValueChange"]
[connection signal="onValueChange" from="ChanceToDropCreditsUI" to="." method="_on_ChanceToDropCreditsUI_onValueChange"]
[connection signal="onValueChange" from="MinCreditsUI" to="." method="_on_MinCreditsUI_onValueChange"]
[connection signal="onValueChange" from="MaxCreditsUI" to="." method="_on_MaxCreditsUI_onValueChange"]
[connection signal="item_selected" from="CustomLootKindSelector" to="." method="_on_CustomLootKindSelector_item_selected"]
[connection signal="item_selected" from="HBoxContainer/CustomLootItemList" to="." method="_on_CustomLootItemList_item_selected"]
[connection signal="pressed" from="HBoxContainer2/AddCustomLootButton" to="." method="_on_AddCustomLootButton_pressed"]
